incluir firebase en tareas

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,5 @@
-<p>This is the about view.</p>
+<div class="container">
+	<about-Directive texto="texto1"></about-Directive>
+	<about-Directive texto="texto2"></about-Directive>
+</div>
+
