--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,9 +2,9 @@
   <h1>'Hola, 'David!</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    Bienvenido a tu primera aplicación Web con Yeoman, AngularJs y muchos mas.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#">Comencemos!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
