--- a/app/views/tareas.html
+++ b/app/views/tareas.html
@@ -1,5 +1,7 @@
-		<span>{{restantes()}} de {{tareas.length}}</span>
-		<a href="" class="text-danger" ng-click="eliminar()">[Eliminar]</a>
+		<div ng-show="restantes() != 0">
+			<span>{{restantes()}} de {{tareas.length}}</span>
+			<a href="" class="text-danger" ng-click="eliminar()">[Eliminar]</a>
+		</div>
 			<ul class="unstyled">
 				<li ng-repeat="tarea in tareas">
 				<input type="checkbox" ng-model="tarea.hecho">
