incluir id de empleado

--- a/app/views/tareas.html
+++ b/app/views/tareas.html
@@ -8,8 +8,8 @@
 				<span class="hecho-{{tarea.hecho}}">{{tarea.texto}}</span>
 				</li>
 			</ul>
-			<form ng-submit=agregarTarea()>
-				<input type="text" size="30" placeholder="Agrega una nueva tarea"
+			<form>
+				<input placeholder="Agrega una nueva tarea"
 				ng-model="textoNuevaTarea">
-				<button class="btn btn-primary" type="submit">Agregar</button>
+				<button ng-click="agregarTarea()" >Agregar</button>
 			</form>
