--- a/app/views/empleados.html
+++ b/app/views/empleados.html
@@ -34,9 +34,16 @@
                 
                 <div class="form-group">
                     <label>Fecha Inicio:</label>
-                    
-                    <input type="text" class="form-control" name="fecha" ui-date="date_firstDateOptions" ui-date-format="dd-mm-yy" 
-                           ng-model="empleado.fecha" ng-required="true"/>
+                    <div class="row">
+                    	<div class="col-md-6">
+                    		<p class="input-group">
+                    		              			<input type="text" class="form-control" name="fecha" datepicker-popup="dd-MM-yyyy" ng-model="empleado.fecha" is-open="opened" max-date="'2015-06-22'" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                    		              			<span class="input-group-btn">
+                    		                		<button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                    		              			</span>
+                    		            		</p>
+                    	</div>
+                    </div>
                 </div>
                 
                 <div class="form-group">
