--- a/app/views/empleados.html
+++ b/app/views/empleados.html
@@ -78,7 +78,7 @@
     </script>
 
     <button class="btn btn-primary btn-lg" ng-click="crear()">
-    <span class="glyphicon glyphicon-person"></span> Nuevo Empleado
+    <span class="glyphicon glyphicon-user"></span> Nuevo Empleado
     </button>
 		<hr>
 
