pruebas de karma-jashmin etc..

--- a/app/views/empleados.html
+++ b/app/views/empleados.html
@@ -115,7 +115,7 @@
 									<td>{{empleado.nombre | uppercase}}</td>
 									<td>{{empleado.apellidos}}</td>
 									<td>{{empleado.fecha | date}} <!--a las {{empleado.fechainicio | date:'hh:mm'}}--></td>
-									<td>{{empleado.telefono}}</td>
+									<td>{{empleado.telefono | TelefonoFl}}</td>
 									<td>{{empleado.salario | currency}}</td>
 									<td>{{empleado.tipo}}</td>
 								</tr>
